fixed button spacing and some readme edits

--- a/demo/client/stylesheets/styles.scss
+++ b/demo/client/stylesheets/styles.scss
@@ -111,6 +111,7 @@ button {
   background-color: $dark-grey;
   color: $white;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  margin-right: 0.5rem;
 }
 
 button:hover {
